--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crowdmix.twittererer" >
+    package="com.crowdmix.twittererer">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:name=".ui.activities.LoginActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +26,9 @@
             android:value="ea51e6300b73a08658ef46bd982904953d7974c5" />
 
         <activity
-            android:name=".TwitterFeedActivity"
-            android:label="@string/title_activity_twitter_feed" >
-        </activity>
+            android:name=".ui.activities.TimelineActivity"
+            android:label="@string/title_activity_twitter_feed"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
