--- a/app/src/androidTest/AndroidManifest.xml
+++ b/app/src/androidTest/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.crowdmix.twittererer">
+    package="com.zedeff.twittererer">
 
     <uses-sdk tools:overrideLibrary="android.support.test.uiautomator.v18" />
 
