--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,21 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.zedeff.twittererer"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        jackOptions {
+            enabled false
+        }
     }
 
     buildTypes {
@@ -38,16 +42,16 @@ gradle.projectsEvaluated {
 
 dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
-    provided 'org.projectlombok:lombok:1.16.8'
-    apt 'org.projectlombok:lombok:1.16.8'
-    // cannot use dagger 2.3 just yet https://code.google.com/p/android/issues/detail?id=206407
-    apt 'com.google.dagger:dagger-compiler:2.2'
-    androidTestApt 'com.google.dagger:dagger-compiler:2.2'
+    provided 'org.projectlombok:lombok:1.16.10'
+    apt 'org.projectlombok:lombok:1.16.10'
+    apt 'com.google.dagger:dagger-compiler:2.7'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    androidTestApt 'com.google.dagger:dagger-compiler:2.7'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile 'org.robolectric:robolectric:3.1.2'
 
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
@@ -55,23 +59,23 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.2')
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
 
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
 
-    compile 'com.google.dagger:dagger:2.2'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.dagger:dagger:2.7'
+    compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'net.danlew:android.joda:2.9.3'
-    compile 'io.reactivex:rxjava:1.1.3'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'net.danlew:android.joda:2.9.4.1'
+    compile 'io.reactivex:rxjava:1.2.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.4@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:twitter:1.13.0@aar') {
+    compile('com.twitter.sdk.android:twitter:2.0.1@aar') {
         transitive = true;
     }
 }
@@ -79,6 +83,6 @@ dependencies {
 configurations.all {
     // Currently espresso 2.2.2 is dependent on 23.1.1
     resolutionStrategy {
-        force 'com.android.support:design:23.3.0'
+        force 'com.android.support:design:24.2.1'
     }
 }
