--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'io.fabric.tools:gradle:1.19.2'
-        classpath "gradle.plugin.me.tatarka:gradle-retrolambda:3.2.5"
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'gradle.plugin.me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
@@ -21,7 +21,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "http://dl.bintray.com/populov/maven" }
+        maven { url 'http://dl.bintray.com/populov/maven' }
         maven { url 'https://maven.fabric.io/public' }
         jcenter()
     }
