--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.zedeff.twittererer"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -42,17 +42,19 @@ gradle.projectsEvaluated {
 
 dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
-    provided 'org.projectlombok:lombok:1.16.10'
-    apt 'org.projectlombok:lombok:1.16.10'
-    apt 'com.google.dagger:dagger-compiler:2.7'
+    provided 'org.projectlombok:lombok:1.16.12'
+    apt 'org.projectlombok:lombok:1.16.12'
+    apt 'com.google.dagger:dagger-compiler:2.8'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    androidTestApt 'com.google.dagger:dagger-compiler:2.7'
+    androidTestApt 'com.google.dagger:dagger-compiler:2.8'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.mockito:mockito-core:2.3.7'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.robolectric:robolectric:3.1.2'
+    testCompile 'org.robolectric:robolectric:3.1.4'
 
+    // sticking to this version as dexmaker doesn't support mockito 2 yet
+    // https://github.com/mockito/mockito/issues/706
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
@@ -61,21 +63,21 @@ dependencies {
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
 
-    compile 'com.google.dagger:dagger:2.7'
+    compile 'com.google.dagger:dagger:2.8'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'net.danlew:android.joda:2.9.4.1'
-    compile 'io.reactivex:rxjava:1.2.0'
+    compile 'net.danlew:android.joda:2.9.5.1'
+    compile 'io.reactivex:rxjava:1.2.4'
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.4@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:twitter:2.0.1@aar') {
+    compile('com.twitter.sdk.android:twitter:2.3.0@aar') {
         transitive = true;
     }
 }
@@ -83,6 +85,6 @@ dependencies {
 configurations.all {
     // Currently espresso 2.2.2 is dependent on 23.1.1
     resolutionStrategy {
-        force 'com.android.support:design:24.2.1'
+        force 'com.android.support:design:25.1.0'
     }
 }
