--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.zedeff.twittererer"
@@ -42,16 +42,16 @@ gradle.projectsEvaluated {
 
 dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
-    provided 'org.projectlombok:lombok:1.16.12'
-    apt 'org.projectlombok:lombok:1.16.12'
-    apt 'com.google.dagger:dagger-compiler:2.8'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    androidTestApt 'com.google.dagger:dagger-compiler:2.8'
+    provided 'org.projectlombok:lombok:1.16.16'
+    apt 'org.projectlombok:lombok:1.16.16'
+    apt 'com.google.dagger:dagger-compiler:2.11'
+    apt 'com.jakewharton:butterknife-compiler:8.6.0'
+    androidTestApt 'com.google.dagger:dagger-compiler:2.11'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.3.7'
+    testCompile 'org.mockito:mockito-core:2.8.47'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.robolectric:robolectric:3.1.4'
+    testCompile 'org.robolectric:robolectric:3.3.2'
 
     // sticking to this version as dexmaker doesn't support mockito 2 yet
     // https://github.com/mockito/mockito/issues/706
@@ -63,28 +63,26 @@ dependencies {
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
 
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
 
-    compile 'com.google.dagger:dagger:2.8'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'net.danlew:android.joda:2.9.5.1'
-    compile 'io.reactivex:rxjava:1.2.4'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'net.danlew:android.joda:2.9.9'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:twitter:2.3.0@aar') {
-        transitive = true;
-    }
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
 }
 
 configurations.all {
     // Currently espresso 2.2.2 is dependent on 23.1.1
     resolutionStrategy {
-        force 'com.android.support:design:25.1.0'
+        force 'com.android.support:design:25.3.1'
     }
 }
